[gd_scene load_steps=49 format=3 uid="uid://cle5k5a0otnrl"]

[ext_resource type="Shader" uid="uid://bxudinudgkho3" path="res://Shaders/Cobblestone.gdshader" id="1_o3isv"]
[ext_resource type="Shader" uid="uid://dd40doue2epok" path="res://Shaders/Grid.gdshader" id="1_qox7n"]
[ext_resource type="Script" uid="uid://dmsi32be26jds" path="res://Scripts/LevelScripts/level_2_real.gd" id="2_4ju3q"]
[ext_resource type="FontFile" uid="uid://bbgliofgel8u8" path="res://Assets/Fonts/Sixtyfour-Regular-VariableFont_BLED,SCAN.ttf" id="3_jixyi"]
[ext_resource type="PackedScene" uid="uid://ch5uhvbhutp8a" path="res://Scenes/Player/Player.tscn" id="3_ramdh"]
[ext_resource type="PackedScene" uid="uid://cjl5n1qfq2ys6" path="res://Scenes/Objects/Lever.tscn" id="5_n6t8q"]
[ext_resource type="AudioStream" uid="uid://dkcdsqa6mvdj6" path="res://Assets/VoiceLines/Level2/Level2 - Intro.wav" id="7_axppo"]
[ext_resource type="AudioStream" uid="uid://bqxqrxqhb1n1b" path="res://Assets/VoiceLines/Level2/Level2 - Sidenote1.wav" id="8_inorh"]
[ext_resource type="AudioStream" uid="uid://bnpx8hym7gbms" path="res://Assets/VoiceLines/Level2/Level2 - introskip.wav" id="8_oxtd8"]
[ext_resource type="AudioStream" uid="uid://ccv62exflopm" path="res://Assets/VoiceLines/Level2/Level2 - Sidenote2.wav" id="9_oxtd8"]
[ext_resource type="AudioStream" uid="uid://brhmavcul1lpq" path="res://Assets/Sounds/SFX/Blackhole/static_buildup.mp3" id="11_cexhq"]
[ext_resource type="Shader" uid="uid://dp0m2gp5qtue0" path="res://Shaders/blackhole.gdshader" id="11_luow5"]
[ext_resource type="AudioStream" uid="uid://dap3scsqawtvm" path="res://Assets/Sounds/SFX/Blackhole/subsonic_boom.mp3" id="12_0jitg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ramdh"]
shader = ExtResource("1_qox7n")
shader_parameter/grid_color = Color(0, 0, 0, 1)
shader_parameter/grid_size = 60.855
shader_parameter/line_thickness = 5.46

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jitg"]
size = Vector2(61.738, 40)

[sub_resource type="Animation" id="Animation_vfeps"]
resource_name = "DoorUp"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wall:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(-42, 8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wall2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(6, 8), Vector2(48, 8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DoorMiddle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-16, 54), Vector2(-16, 54), Vector2(-16, -129)]
}

[sub_resource type="Animation" id="Animation_eqs5w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wall:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 26)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wall2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(6, 26)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DoorMiddle:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 54)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gu1j6"]
_data = {
&"DoorUp": SubResource("Animation_vfeps"),
&"RESET": SubResource("Animation_eqs5w")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qox7n"]
shader = ExtResource("1_o3isv")
shader_parameter/crack_density = 5.24
shader_parameter/crack_intensity = 0.955

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ramdh"]
size = Vector2(6272, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axppo"]
size = Vector2(106, 40)

[sub_resource type="Animation" id="Animation_axppo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Platform3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-73, 335)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-73, 619)]
}

[sub_resource type="Animation" id="Animation_4ju3q"]
resource_name = "platform_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-73, 619), Vector2(35, 619)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Platform3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667, 0.666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-73, 335), Vector2(35, 335)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dafx8"]
_data = {
&"RESET": SubResource("Animation_axppo"),
&"platform_in": SubResource("Animation_4ju3q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jixyi"]
size = Vector2(40, 40.0227)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6t8q"]
size = Vector2(40, 40)

[sub_resource type="Gradient" id="Gradient_557vl"]
offsets = PackedFloat32Array(0.012987, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n6t8q"]
gradient = SubResource("Gradient_557vl")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ju3q"]
size = Vector2(61.738, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dafx8"]
size = Vector2(63, 39.1296)

[sub_resource type="Animation" id="Animation_dafx8"]
resource_name = "Move"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.41, 2.73333, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(488, 572), Vector2(488, 572), Vector2(488, 299), Vector2(488, 299)]
}

[sub_resource type="Animation" id="Animation_inorh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(488, 572)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oxtd8"]
_data = {
&"Move": SubResource("Animation_dafx8"),
&"RESET": SubResource("Animation_inorh")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luow5"]
size = Vector2(63, 40.0995)

[sub_resource type="Animation" id="Animation_cexhq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(416, 334)]
}

[sub_resource type="Animation" id="Animation_ck0i2"]
resource_name = "move"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.76667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(144, 334), Vector2(416, 334)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jitg"]
_data = {
&"RESET": SubResource("Animation_cexhq"),
&"move": SubResource("Animation_ck0i2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inorh"]
size = Vector2(63, 40.1328)

[sub_resource type="Animation" id="Animation_luow5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(603, 334)]
}

[sub_resource type="Animation" id="Animation_oxtd8"]
resource_name = "move"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1007, 334), Vector2(603, 334)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ck0i2"]
_data = {
&"RESET": SubResource("Animation_luow5"),
&"move": SubResource("Animation_oxtd8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxtd8"]
size = Vector2(63, 40.1327)

[sub_resource type="Animation" id="Animation_rujef"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1080, 364)]
}

[sub_resource type="Animation" id="Animation_0jitg"]
resource_name = "move"
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1080, 364), Vector2(1080, 156)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wrx"]
_data = {
&"RESET": SubResource("Animation_rujef"),
&"move": SubResource("Animation_0jitg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck0i2"]
size = Vector2(147, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cexhq"]
size = Vector2(21, 220)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ck0i2"]
shader = ExtResource("11_luow5")
shader_parameter/strength = 0.0
shader_parameter/black_radius = 1.0

[node name="Level2" type="Node2D"]

[node name="LevelCamera" type="Camera2D" parent="."]
position = Vector2(650, 367)
scale = Vector2(-198.006, -14.4251)

[node name="BackgroundColor" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ramdh")
offset_left = -482.0
offset_top = -425.0
offset_right = -442.0
offset_bottom = -385.0
scale = Vector2(572.12, 41.68)
color = Color(0.344076, 0.344076, 0.344076, 1)

[node name="Walls" type="Node2D" parent="."]
position = Vector2(867, 666)

[node name="Wall" type="ColorRect" parent="Walls"]
offset_top = 26.0
offset_right = 5.0
offset_bottom = 58.0
color = Color(0, 0, 0, 1)

[node name="Wall2" type="ColorRect" parent="Walls"]
offset_left = 6.0
offset_top = 26.0
offset_right = 14.0
offset_bottom = 58.0
color = Color(0, 0, 0, 1)

[node name="DoorMiddle" type="Area2D" parent="Walls"]
position = Vector2(-16, 54)
scale = Vector2(1.2796, 4.0796)

[node name="ColorRect" type="ColorRect" parent="Walls/DoorMiddle"]
offset_left = -15.0
offset_right = 114.0
offset_bottom = 40.0
scale = Vector2(0.48001, 1)
color = Color(0.372327, 0.219733, 1.92523e-07, 1)

[node name="Knob" type="ColorRect" parent="Walls/DoorMiddle"]
offset_left = 33.0
offset_top = 23.0
offset_right = 48.0
offset_bottom = 26.0
scale = Vector2(0.48001, 1)
color = Color(0.988022, 0.615569, 6.93083e-06, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/DoorMiddle"]
position = Vector2(16.0206, 19.9999)
shape = SubResource("RectangleShape2D_0jitg")

[node name="AppearDoor" type="AnimationPlayer" parent="Walls"]
libraries = {
&"": SubResource("AnimationLibrary_gu1j6")
}

[node name="Level2Elements" type="Node2D" parent="."]
script = ExtResource("2_4ju3q")

[node name="Floor" type="StaticBody2D" parent="Level2Elements"]
position = Vector2(0, 700)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/Floor"]
material = SubResource("ShaderMaterial_qox7n")
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(127.896, 1)
color = Color(0.140447, 0.140447, 0.140447, 1)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/Floor"]
position = Vector2(3136, 20)
shape = SubResource("RectangleShape2D_ramdh")

[node name="Platform1" type="StaticBody2D" parent="Level2Elements"]
position = Vector2(-73, 619)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/Platform1"]
position = Vector2(51, 19)
scale = Vector2(0.991668, 1.0229)
shape = SubResource("RectangleShape2D_axppo")

[node name="ColorRect" type="ColorRect" parent="Level2Elements/Platform1"]
offset_left = 104.0
offset_top = 39.0
offset_right = 209.0
offset_bottom = 79.0
rotation = -3.14159
scale = Vector2(1.00365, 1.01104)

[node name="Plat1,3" type="AnimationPlayer" parent="Level2Elements/Platform1"]
libraries = {
&"": SubResource("AnimationLibrary_dafx8")
}

[node name="Platform3" type="StaticBody2D" parent="Level2Elements"]
position = Vector2(-73, 335)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/Platform3"]
position = Vector2(51, 19)
scale = Vector2(0.991668, 1.0229)
shape = SubResource("RectangleShape2D_axppo")

[node name="ColorRect" type="ColorRect" parent="Level2Elements/Platform3"]
offset_left = 104.0
offset_top = 39.0
offset_right = 209.0
offset_bottom = 79.0
rotation = -3.14159
scale = Vector2(1.00365, 1.01104)

[node name="WallL" type="StaticBody2D" parent="Level2Elements"]
scale = Vector2(0.839999, 17.64)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/WallL"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.999763, 0.992068)
color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/WallL"]
position = Vector2(20, 20.0113)
shape = SubResource("RectangleShape2D_jixyi")

[node name="WallR" type="StaticBody2D" parent="Level2Elements"]
position = Vector2(1263, 0)
scale = Vector2(0.839999, 17.64)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/WallR"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.999763, 0.992068)
color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/WallR"]
position = Vector2(20, 20.0113)
shape = SubResource("RectangleShape2D_jixyi")

[node name="Roof" type="StaticBody2D" parent="Level2Elements"]
scale = Vector2(260.76, 0.76)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/Roof"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.0646965, 0.0646965, 0.0646965, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/Roof"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_n6t8q")

[node name="LevelCounter" type="Node2D" parent="Level2Elements"]
position = Vector2(0, 6)

[node name="Control" type="Control" parent="Level2Elements/LevelCounter"]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 136.0
offset_right = 1256.0
offset_bottom = 700.0

[node name="Outline" type="ColorRect" parent="Level2Elements/LevelCounter/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = -6.0
offset_right = 116.0
offset_bottom = 46.0
grow_horizontal = 2
color = Color(0.270222, 0.270222, 0.270222, 1)

[node name="Inside" type="ColorRect" parent="Level2Elements/LevelCounter/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = -3.0
offset_right = 113.0
offset_bottom = 43.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="Level2Elements/LevelCounter/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_right = 113.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.843184, 0.843184, 0.843184, 1)
theme_override_fonts/font = ExtResource("3_jixyi")
theme_override_font_sizes/font_size = 46
text = "2"
horizontal_alignment = 1

[node name="Light" type="Node2D" parent="Level2Elements"]
position = Vector2(634, 30)

[node name="LightbulbWire" type="ColorRect" parent="Level2Elements/Light"]
offset_left = 11.0
offset_right = 51.0
offset_bottom = 40.0
scale = Vector2(0.159995, 0.559999)
color = Color(0.180005, 0.180005, 0.180005, 1)

[node name="Lightbulb" type="ColorRect" parent="Level2Elements/Light"]
offset_left = 2.0
offset_top = 20.0
offset_right = 42.0
offset_bottom = 60.0
scale = Vector2(0.639995, 0.16)
color = Color(0.484183, 0.266439, 0.0693719, 1)

[node name="PointLight2D" type="PointLight2D" parent="Level2Elements"]
position = Vector2(648.001, 59)
scale = Vector2(19.4062, 19.9858)
color = Color(0.279099, 0.114292, 0.0467659, 1)
energy = 3.09
shadow_enabled = true
texture = SubResource("GradientTexture2D_n6t8q")

[node name="DoorMiddle" type="Area2D" parent="Level2Elements"]
position = Vector2(158, 537)
scale = Vector2(1.2796, 4.0796)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/DoorMiddle"]
offset_left = -15.0
offset_right = 114.0
offset_bottom = 40.0
scale = Vector2(0.48001, 1)
color = Color(0.372327, 0.219733, 1.92523e-07, 1)

[node name="Knob" type="ColorRect" parent="Level2Elements/DoorMiddle"]
offset_left = 33.0
offset_top = 23.0
offset_right = 48.0
offset_bottom = 26.0
scale = Vector2(0.48001, 1)
color = Color(0.988022, 0.615569, 6.93083e-06, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/DoorMiddle"]
position = Vector2(16.0206, 19.9999)
shape = SubResource("RectangleShape2D_4ju3q")

[node name="Platform2" type="StaticBody2D" parent="Level2Elements"]
position = Vector2(334, 542)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/Platform2"]
position = Vector2(51, 19)
scale = Vector2(0.991668, 1.0229)
shape = SubResource("RectangleShape2D_axppo")

[node name="ColorRect" type="ColorRect" parent="Level2Elements/Platform2"]
offset_left = 104.0
offset_top = 39.0
offset_right = 209.0
offset_bottom = 79.0
rotation = -3.14159
scale = Vector2(1.00365, 1.01104)

[node name="MovingPlatform" type="AnimatableBody2D" parent="Level2Elements"]
position = Vector2(488, 572)
scale = Vector2(1, 0.996692)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/MovingPlatform"]
position = Vector2(31.5, 19.5651)
shape = SubResource("RectangleShape2D_dafx8")

[node name="ColorRect" type="ColorRect" parent="Level2Elements/MovingPlatform"]
offset_right = 63.0
offset_bottom = 40.0

[node name="Move" type="AnimationPlayer" parent="Level2Elements/MovingPlatform"]
libraries = {
&"": SubResource("AnimationLibrary_oxtd8")
}
autoplay = "Move"

[node name="MovingPlatform2" type="AnimatableBody2D" parent="Level2Elements"]
position = Vector2(416, 334)
scale = Vector2(1, 0.996692)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/MovingPlatform2"]
offset_right = 63.0
offset_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/MovingPlatform2"]
position = Vector2(31.5, 20.0829)
shape = SubResource("RectangleShape2D_luow5")

[node name="Move" type="AnimationPlayer" parent="Level2Elements/MovingPlatform2"]
libraries = {
&"": SubResource("AnimationLibrary_0jitg")
}
autoplay = "move"

[node name="MovingPlatform3" type="AnimatableBody2D" parent="Level2Elements"]
position = Vector2(603, 334)
scale = Vector2(1, 0.996692)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/MovingPlatform3"]
offset_right = 63.0
offset_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/MovingPlatform3"]
position = Vector2(31.5, 20.0663)
shape = SubResource("RectangleShape2D_inorh")

[node name="Move" type="AnimationPlayer" parent="Level2Elements/MovingPlatform3"]
libraries = {
&"": SubResource("AnimationLibrary_ck0i2")
}
autoplay = "move"

[node name="MovingPlatform4" type="AnimatableBody2D" parent="Level2Elements"]
position = Vector2(1080, 364)
scale = Vector2(1, 0.996692)

[node name="ColorRect" type="ColorRect" parent="Level2Elements/MovingPlatform4"]
offset_right = 63.0
offset_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/MovingPlatform4"]
position = Vector2(31.5, 20.0663)
shape = SubResource("RectangleShape2D_oxtd8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Level2Elements/MovingPlatform4"]
libraries = {
&"": SubResource("AnimationLibrary_p6wrx")
}
autoplay = "move"

[node name="Lever1" parent="Level2Elements" instance=ExtResource("5_n6t8q")]
position = Vector2(1186, 562)

[node name="Lever2" parent="Level2Elements" instance=ExtResource("5_n6t8q")]
position = Vector2(368, 456)

[node name="Lever3" parent="Level2Elements" instance=ExtResource("5_n6t8q")]
position = Vector2(845, 259)

[node name="Lever4" parent="Level2Elements" instance=ExtResource("5_n6t8q")]
position = Vector2(72, 247)

[node name="Lever5" parent="Level2Elements" instance=ExtResource("5_n6t8q")]
position = Vector2(1186, 93)

[node name="SideNote1" type="Area2D" parent="Level2Elements"]
position = Vector2(0, -60)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/SideNote1"]
position = Vector2(523.5, 441)
shape = SubResource("RectangleShape2D_ck0i2")

[node name="SideNote2" type="Area2D" parent="Level2Elements"]
position = Vector2(432, -160)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2Elements/SideNote2"]
position = Vector2(460.5, 436)
shape = SubResource("RectangleShape2D_cexhq")

[node name="Player" parent="." instance=ExtResource("3_ramdh")]
position = Vector2(181, 631)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="Voicelines" type="Node" parent="."]

[node name="Welcome" type="AudioStreamPlayer" parent="Voicelines"]
stream = ExtResource("7_axppo")
volume_db = 8.0

[node name="WelcomeSkip" type="AudioStreamPlayer" parent="Voicelines"]
stream = ExtResource("8_oxtd8")
volume_db = 8.0

[node name="Sidenote1" type="AudioStreamPlayer" parent="Voicelines"]
stream = ExtResource("8_inorh")
volume_db = 8.0

[node name="Sidenote2" type="AudioStreamPlayer" parent="Voicelines"]
stream = ExtResource("9_oxtd8")
volume_db = 8.0

[node name="SFX" type="Node2D" parent="."]

[node name="Static" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2(660, 353)
stream = ExtResource("11_cexhq")
volume_db = -3.617

[node name="Boom" type="AudioStreamPlayer2D" parent="SFX"]
position = Vector2(660, 353)
stream = ExtResource("12_0jitg")
volume_db = 4.522

[node name="WorldGoByeBye" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ck0i2")
offset_left = 35.0
offset_top = 35.0
offset_right = 1273.0
offset_bottom = 706.0

[connection signal="body_entered" from="Walls/DoorMiddle" to="Level2Elements" method="_on_door_middle_body_entered"]
[connection signal="powered" from="Level2Elements/Lever1" to="Level2Elements" method="_on_lever_1_powered"]
[connection signal="powered" from="Level2Elements/Lever2" to="Level2Elements" method="_on_lever_2_powered"]
[connection signal="powered" from="Level2Elements/Lever3" to="Level2Elements" method="_on_lever_3_powered"]
[connection signal="powered" from="Level2Elements/Lever4" to="Level2Elements" method="_on_lever_4_powered"]
[connection signal="powered" from="Level2Elements/Lever5" to="Level2Elements" method="_on_lever_5_powered"]
[connection signal="body_entered" from="Level2Elements/SideNote1" to="Level2Elements" method="_on_side_note_1_body_entered"]
[connection signal="body_entered" from="Level2Elements/SideNote2" to="Level2Elements" method="_on_side_note_2_body_entered"]
[connection signal="finished" from="Voicelines/Welcome" to="Level2Elements" method="_on_welcome_finished"]
[connection signal="finished" from="SFX/Static" to="Level2Elements" method="_on_static_finished"]
